Fixed bugs on mobile design

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -554,6 +554,7 @@
     line-height: 150%;
     font-size: 1rem;
     opacity: 0.8;
+    margin-top: 10px;
 
     span {
       // margin-right: 10em;
@@ -563,12 +564,22 @@
       display: block;
       font-size: 1.2rem;
       opacity: 0.8;
+      margin-top: 0;
 
       span {
         margin-right: 0;
       }
     }
+
+    @media (max-width: 768px) {
+      font-size: 13px;
+      span {
+        font-size: 16px;
+      }
+    }
   }
+
+  
 
   &__discount {
     position: absolute;
@@ -909,7 +920,7 @@
   }
 
   @media (min-width: 1200px) {
-    gap: 0px;
+    gap: 20px;
   }
 
   &__right {
@@ -991,8 +1002,10 @@
         max-width: 308px;
 
         img {
-          // width: 100%;
           max-width: 100%;
+
+          width: 100%;
+
         }
       }
     }
@@ -1140,7 +1153,7 @@
   font-weight: bold;
   font-size: 1em;
   margin-bottom: 1em;
-  opacity: 0.7;
+  opacity: 0.8;
   margin-top: 10px;
 
   @media (min-width: 768px) {
@@ -1194,6 +1207,12 @@
     margin: 0.2em 0 10px 0;
   }
 
+  &__empty {
+    width: 100%;
+    margin-top: 4px;
+
+  }
+
   &__delete {
     background-color: transparent;
     border: none;
@@ -1212,10 +1231,10 @@
       height: 15px;
       border-radius: 10px;
       background-color: #333333;
-      transform: translateX(-12px) rotate(45deg);
+      transform: translateX(-13px) rotate(45deg);
 
       @media (min-width: 768px) {
-        transform: translateX(-12px) rotate(45deg);
+        transform: translateX(-13px) rotate(45deg);
         width: 2px;
         height: 25px;
       }
@@ -1230,7 +1249,7 @@
       border-radius: 10px;
       height: 15px;
       background-color: #333333;
-      transform: translateX(7px) rotate(-45deg);
+      transform: translateX(6px) rotate(-45deg);
 
       @media (min-width: 768px) {
         transform: translateX(5px) rotate(-45deg);
@@ -1431,6 +1450,13 @@
 }
 
 .search__wrapper {
+  @media (max-width: 768px) {
+    .goods__empty {
+      font-size: 13px;
+      margin-bottom: 30px;
+    }
+  }
+
   .search__items {
     display: grid;
     grid-template-columns: repeat(1, minmax(150px, 1fr));
@@ -2042,7 +2068,7 @@
     background-color: white;
     position: relative;
     overflow-y: auto;
-    padding: 1em;
+    padding: 24px 1em;
     opacity: 1;
     margin: 1em;
     flex: 1;
@@ -2136,6 +2162,7 @@
   .form__subtitle {
     font-size: 14px;
     line-height: 150%;
+    align-self: flex-start;
 
     @media (max-width: 768px) {
       font-size: 12px;
@@ -2381,11 +2408,16 @@
     align-items: center;
     gap: 10px;
     cursor: pointer;
+
+    .header__login {
+      margin-top: 0;
+    }
   }
 
   &__img {
     width: 24px;
     height: 24px;
+    filter: contrast(0);
   }
 }
 
